--- a/index.html
+++ b/index.html
@@ -98,6 +98,21 @@
         </div>
 
         <div id="project_2" class="projects">
+            <img src="katsuno.jpeg" alt="" width="350px" height="300px" >
+            <div style="display: flex; flex-direction: column;">
+            <h1><span class="font_pixel">Katsuno-Wasyouku</span><h1>
+            <p>As a freelance web developer, my goal is to partner with businesses and individuals who value innovative digital solutions. I'm committed to delivering tailored websites that not only meet your specific needs but also exceed your expectations. 
+                Whether you're launching a new venture, revamping an existing site, or seeking to enhance your online presence, 
+                I'm here to collaborate with you on projects that resonate with both your vision and my expertise.
+                My freelance journey is driven by a desire to bring creativity, technical excellence, 
+                and a client-centric approach to every project. I understand the importance of effective communication, 
+                meeting deadlines, and staying within budget. Rest assured, I'm not just here to complete tasks; 
+                I'm here to build exceptional results.</p>
+                <a href="https://ratabeg.github.io/Katsuno/" class="btn">Check out site</a>
+            </div>
+        </div>
+                
+        <div id="project_3" class="projects">
             <img src="https://raw.githubusercontent.com/Loppansson/kenney-pixel-platformer/main/icon.png" alt="" width="350px" height="300px" >
             <div style="display: flex; flex-direction: column;">
             <h1><span class="font_pixel">Frame of Mind</span><h1>
