--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         </div>
 
         <div id="project_2" class="projects">
-            <img src="katsuno.jpeg" alt="" width="350px" height="300px" >
+            <img src="screenshot_katsuno.jpeg" alt="" width="350px" height="300px" >
             <div style="display: flex; flex-direction: column;">
-            <h1><span class="font_pixel">Katsuno-Wasyouku</span><h1>
+            <h1><span class="font_minimalist">Katsuno-Wasyouku</span><h1>
             <p>As a freelance web developer, my goal is to partner with businesses and individuals who value innovative digital solutions. I'm committed to delivering tailored websites that not only meet your specific needs but also exceed your expectations. 
                 Whether you're launching a new venture, revamping an existing site, or seeking to enhance your online presence, 
                 I'm here to collaborate with you on projects that resonate with both your vision and my expertise.
