--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section id="profile">
       <div class="section__pic-container">
 
-        <img src="./img/profile-pic.jpg" alt="raouf atabeg profile picture" />
+        <img src="./img/profile-pic.JPG" alt="raouf atabeg profile picture" />
         
 
       </div>
