--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -222,7 +222,7 @@
                 />
                 <div>
                   <h3>Java</h3>
-                  <p>Intermediate</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -233,7 +233,7 @@
                 />
                 <div>
                   <h3>Python</h3>
-                  <p>Intermediate</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
