--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         </div>
       </div>
     </nav>
-    <section id="profile">
-      <div class="section__pic-container">
+    <section id="profile" class="logo_transition"> 
+      <div class="section__pic-container ">
 
         <img src="./img/profile-pic.JPG" alt="raouf atabeg profile picture" />
         
 
       </div>
-      <div class="section__text">
+      <div class="section__text animation-delay">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Raouf Atabeg</h1>
         <p class="section__text__p2"><span class="multiple-text"></span></p>
@@ -82,7 +82,7 @@
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
-        <div class="section__pic-container">
+        <div class="section__pic-container reveal ">
           <!-- <img
             src="./assets/about-pic.png"
             alt="Profile picture"
@@ -103,7 +103,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p>2+ years <br />Frontend Development & Software Development</p>
             </div>
             <div class="details-container">
               <img
@@ -205,7 +205,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Material UI</h3>
+                  <h3>PHP</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -244,6 +244,17 @@
                 />
                 <div>
                   <h3>C\C++</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>C#\.NET</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
