--- a/index.html
+++ b/index.html
@@ -440,6 +440,8 @@
       <p>Copyright &#169; 2023 Raouf Atabeg. All Rights Reserved.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <!-- chatbot script -->
+    <script src="//code.tidio.co/yqkwgzo1uawqpkyrmtb0rirti0igrgdy.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
